# gst-rtsputils-python

./: .gitmodules  Makefile.am  acinclude.m4  autogen.sh  configure.ac
examples/: cam-server.py  relay-server.py
rtsputils/: Makefile.am  __init__.py  rtsputils.defs  rtsputils.override  rtsputilsmodule.c
src/: Makefile.am  rtsputils.defs  rtsputilsmodule.c
